# stereo-calib

./: LICENSE  README.md  REPORT.md  pyproject.toml
dataset/: target_info.txt
examples/: perform_calibration.py  perform_calibration_and_estimate_distance.py  perform_calibration_with_overall_analysis.py  perform_calibration_with_single_image_analysis.py
results/: calibration_results.json  centre_image_distances_in_mm.json
results/raw_depth_map/: 00.tiff  01.tiff  02.tiff  03.tiff  04.tiff  05.tiff  06.tiff  07.tiff  08.tiff  09.tiff  10.tiff  11.tiff  12.tiff  13.tiff  14.tiff  15.tiff  16.tiff  17.tiff  18.tiff  19.tiff  20.tiff  21.tiff  22.tiff  23.tiff  24.tiff  25.tiff  26.tiff  27.tiff  28.tiff  29.tiff  30.tiff  31.tiff  32.tiff  33.tiff  34.tiff  35.tiff  36.tiff  37.tiff  38.tiff
stereo_calib/calibration/: __init__.py  camera_calibrate.py
stereo_calib/charuco/: __init__.py  charuco_board.py  constants.py
stereo_calib/utils/: __init__.py  calibration_utils.py  stereo_utils.py  vis_utils.py
