[tool.poetry]
name = "stereo-calib"
version = "0.1.0"
description = "Calibration for Stereo Cameras"
authors = ["Shubham Wagh <shubhamwagh48@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
tqdm = "^4.66.2"
loguru = "^0.7.2"
dataclasses-json = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
